--- a/packages/blitoadz-webapp/public/index.html
+++ b/packages/blitoadz-webapp/public/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta property="og:title" content="Chain Dreamers" />
-    <meta property="og:site_name" content="Chain Dreamers" />
-    <meta property="og:url" content="https://chaindreamers.xyz/" />
-    <meta property="og:description" content="Chain Dreamer is an on-chain and narrative-driven project by the Candy Shop" />
-    <meta property="og:image" content="https://chaindreamers.xyz/og-image.png" />
+    <meta property="og:title" content="Blitoadz" />
+    <meta property="og:site_name" content="Blitoadz" />
+    <meta property="og:url" content="https://blitoadz.io/" />
+    <meta property="og:description" content="Blitoadz are an Ethereum on-chain collection of 5,600 NFTs . They are bred from the 56 custom 1/1 CrypToadz (composition) and the 100 original Blitmap artworks (colour palette)." />
+    <meta property="og:image" content="https://blitoadz.io/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@chain_dreamers">
-    <meta name="twitter:title" content="Chain Dreamers">
-    <meta name="twitter:description" content="Chain Dreamer is an on-chain and narrative-driven project by the Candy Shop">
-    <meta name="twitter:image" content="https://chaindreamers.xyz/og-image.png">
+    <meta name="twitter:site" content="@blitoadz">
+    <meta name="twitter:title" content="Blitoadz">
+    <meta name="twitter:description" content="Blitoadz are an Ethereum on-chain collection of 5,600 NFTs . They are bred from the 56 custom 1/1 CrypToadz (composition) and the 100 original Blitmap artworks (colour palette).">
+    <meta name="twitter:image" content="https://blitoadz.io/og-image.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Chain Dreamer is an on-chain and narrative-driven project by the Candy Shop"
+      content="Blitoadz are an Ethereum on-chain collection of 5,600 NFTs . They are bred from the 56 custom 1/1 CrypToadz (composition) and the 100 original Blitmap artworks (colour palette)."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -41,7 +41,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    <title>Chain Dreamers</title>
+    <link href="http://fonts.cdnfonts.com/css/snap-itc" rel="stylesheet">
+    <title>Blitoadz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
