--- a/packages/blitoadz-webapp/public/index.html
+++ b/packages/blitoadz-webapp/public/index.html
@@ -42,6 +42,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/snap-itc" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Blitoadz</title>
   </head>
   <body>
