--- a/packages/blitoadz-webapp/public/index.html
+++ b/packages/blitoadz-webapp/public/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Blitoadz" />
     <meta property="og:site_name" content="Blitoadz" />
     <meta property="og:url" content="https://blitoadz.io/" />
-    <meta property="og:description" content="Blitoadz are an Ethereum on-chain collection of 5,600 NFTs . They are bred from the 56 custom 1/1 CrypToadz (composition) and the 100 original Blitmap artworks (colour palette)." />
+    <meta property="og:description" content="Blitoadz are an Ethereum on-chain collection of 5,600 NFTs . They are bred from the 56 custom 1/1 CrypToadz (composition) and the 100 original Blitmap artworks (color palette)." />
     <meta property="og:image" content="https://blitoadz.io/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -14,14 +14,14 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@blitoadz">
     <meta name="twitter:title" content="Blitoadz">
-    <meta name="twitter:description" content="Blitoadz are an Ethereum on-chain collection of 5,600 NFTs . They are bred from the 56 custom 1/1 CrypToadz (composition) and the 100 original Blitmap artworks (colour palette).">
+    <meta name="twitter:description" content="Blitoadz are an Ethereum on-chain collection of 5,600 NFTs . They are bred from the 56 custom 1/1 CrypToadz (composition) and the 100 original Blitmap artworks (color palette).">
     <meta name="twitter:image" content="https://blitoadz.io/og-image.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Blitoadz are an Ethereum on-chain collection of 5,600 NFTs . They are bred from the 56 custom 1/1 CrypToadz (composition) and the 100 original Blitmap artworks (colour palette)."
+      content="Blitoadz are an Ethereum on-chain collection of 5,600 NFTs . They are bred from the 56 custom 1/1 CrypToadz (composition) and the 100 original Blitmap artworks (color palette)."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
